update service complex member null fix